--- a/IMchat/app/src/main/res/layout/activity_login.xml
+++ b/IMchat/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:textColor="@android:color/black"
-        android:hint="用户名"
+        android:hint="Username"
         android:inputType="text"
         android:imeOptions="actionNext"/>
 
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:textColor="@android:color/black"
-        android:hint="密码"
+        android:hint="Password"
         android:inputType="numberPassword"
         android:imeOptions="actionGo"/>
 
@@ -43,13 +43,13 @@
         android:textSize="22sp"
         android:textColor="@android:color/white"
         android:gravity="center"
-        android:text="登录"/>
+        android:text="LOGIN"/>
 
     <TextView
         android:id="@+id/newUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="新用户"
+        android:text="New User?"
         android:textColor="@color/qq_blue"
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
