--- a/IMchat/app/src/main/res/layout/activity_main.xml
+++ b/IMchat/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,10 @@
     <com.roughike.bottombar.BottomBar
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
-    </com.roughike.bottombar.BottomBar>
+        android:layout_height="60dp"
+        app:bb_tabXmlResource="@xml/bottombar_tabs"
+        app:bb_activeTabColor="@color/qq_blue" />
+
 
 
 
